--- a/src/assets/i18n/strings.i18n.yaml
+++ b/src/assets/i18n/strings.i18n.yaml
@@ -1,7 +1,10 @@
-createNewProject: Create new project
-errorOpeningFile: An error occurred while opening the file.
-fileAlreadyExists: That folder already contains a docker-compose file.\n\nPlease, use the open existing project option instead.
+projectsDrawer:
+  createNewProject: Create new project
+  openExistingProject: Open existing project
+  projects: Projects
+openProjectErrors:
+  errorOpeningFile: An error occurred while opening the file.
+  fileAlreadyExists: That folder already contains a docker-compose file.\n\nPlease, use the open existing project option instead.
+  unknownFailureWhileOpeningFile: "An unknown error occurred while opening the file.\n\nDetails: ${details}"
 ok: OK
 oops: Oops!
-openExistingProject: Open existing project
-projects: Projects
